apps/base/monkeytype/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: monkeytype/monkeytype-backend:25.22.0
        ports:
        - containerPort: 5005
        readinessProbe:
          tcpSocket:
            port: 5005
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: backend-configuration
          mountPath: /app/backend/dist/backend-configuration.json
          subPath: backend-configuration.json
          readOnly: true
        - name: firebase-sa-key
          mountPath: /app/backend/src/credentials/serviceAccountKey.json
          subPath: serviceAccountKey.json
          readOnly: true
      volumes:
        - name: backend-configuration
          configMap:
            name: backend-configuration
        - name: firebase-sa-key
          secret:
            secretName: firebase-sa-key
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: monkeytype
spec:
  selector:
    app: backend
  ports:
  - port: 5005
